hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_pair_oob.php.exp
ERROR: File "lambda_called_on_pair_oob.php", line 3, characters 19-19:
Tuple accessed with an index out of bounds (Typing[4116])
