hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_pair_oob.php
<?hh
function f(): void {
  $f = ($v ==> $v[2]);
  $f(Pair {"a", "b"});
}
